include/codata_constants_2018.h

ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN;/**< m^-1 K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN;/**< m^-1 K^-1 */
ADD_IMPORT extern const double CHARACTERISTIC_IMPEDANCE_OF_VACUUM;/**< ohm */
ADD_IMPORT extern const double U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM;/**< ohm */
ADD_IMPORT extern const double CLASSICAL_ELECTRON_RADIUS;/**< m */
ADD_IMPORT extern const double U_CLASSICAL_ELECTRON_RADIUS;/**< m */
ADD_IMPORT extern const double COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double CONDUCTANCE_QUANTUM;/**< S */
ADD_IMPORT extern const double U_CONDUCTANCE_QUANTUM;/**< S */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_AMPERE_90;/**< A */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_AMPERE_90;/**< A */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_COULOMB_90;/**< C */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_COULOMB_90;/**< C */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_FARAD_90;/**< F */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_FARAD_90;/**< F */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_HENRY_90;/**< H */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_HENRY_90;/**< H */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT;/**< Hz V^-1 */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_OHM_90;/**< ohm */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_OHM_90;/**< ohm */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_VOLT_90;/**< V */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_VOLT_90;/**< V */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT;/**< ohm */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT;/**< ohm */
ADD_IMPORT extern const double CONVENTIONAL_VALUE_OF_WATT_90;/**< W */
ADD_IMPORT extern const double U_CONVENTIONAL_VALUE_OF_WATT_90;/**< W */
ADD_IMPORT extern const double COPPER_X_UNIT;/**< m */
ADD_IMPORT extern const double U_COPPER_X_UNIT;/**< m */
ADD_IMPORT extern const double DEUTERON_ELECTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_ELECTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_DEUTERON_G_FACTOR;/**<  */
ADD_IMPORT extern const double DEUTERON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double DEUTERON_MASS;/**< kg */
ADD_IMPORT extern const double U_DEUTERON_MASS;/**< kg */
ADD_IMPORT extern const double DEUTERON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_DEUTERON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double DEUTERON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_DEUTERON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double DEUTERON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_DEUTERON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double DEUTERON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_DEUTERON_NEUTRON_MAG__MOM__RATIO;/**<  */