src/codata_constants_latest.f90


real(dp), parameter, public :: BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN=69.50348004_dp !< m^-1 K^-1
real(dp), parameter, public :: U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN=0.0_dp !< m^-1 K^-1

real(cdp), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN"):: &
capi_053=BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN !< C API m^-1 K^-1
real(cdp), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN") :: &
capi_U_053=U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN !< C API m^-1 K^-1

real(dp), parameter, public :: CHARACTERISTIC_IMPEDANCE_OF_VACUUM=376.730313668_dp !< ohm
real(dp), parameter, public :: U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM=0.000000057_dp !< ohm

real(cdp), protected, public, bind(C,name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM"):: &
capi_054=CHARACTERISTIC_IMPEDANCE_OF_VACUUM !< C API ohm
real(cdp), protected, public, bind(C,name="U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM") :: &
capi_U_054=U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM !< C API ohm

real(dp), parameter, public :: CLASSICAL_ELECTRON_RADIUS=2.8179403262e-15_dp !< m
real(dp), parameter, public :: U_CLASSICAL_ELECTRON_RADIUS=0.0000000013e-15_dp !< m

real(cdp), protected, public, bind(C,name="CLASSICAL_ELECTRON_RADIUS"):: &
capi_055=CLASSICAL_ELECTRON_RADIUS !< C API m
real(cdp), protected, public, bind(C,name="U_CLASSICAL_ELECTRON_RADIUS") :: &
capi_U_055=U_CLASSICAL_ELECTRON_RADIUS !< C API m

real(dp), parameter, public :: COMPTON_WAVELENGTH=2.42631023867e-12_dp !< m
real(dp), parameter, public :: U_COMPTON_WAVELENGTH=0.00000000073e-12_dp !< m

real(cdp), protected, public, bind(C,name="COMPTON_WAVELENGTH"):: &
capi_056=COMPTON_WAVELENGTH !< C API m
real(cdp), protected, public, bind(C,name="U_COMPTON_WAVELENGTH") :: &
capi_U_056=U_COMPTON_WAVELENGTH !< C API m

real(dp), parameter, public :: CONDUCTANCE_QUANTUM=7.748091729e-5_dp !< S
real(dp), parameter, public :: U_CONDUCTANCE_QUANTUM=0.0_dp !< S

real(cdp), protected, public, bind(C,name="CONDUCTANCE_QUANTUM"):: &
capi_057=CONDUCTANCE_QUANTUM !< C API S
real(cdp), protected, public, bind(C,name="U_CONDUCTANCE_QUANTUM") :: &
capi_U_057=U_CONDUCTANCE_QUANTUM !< C API S

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_AMPERE_90=1.00000008887_dp !< A
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_AMPERE_90=0.0_dp !< A

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_AMPERE_90"):: &
capi_058=CONVENTIONAL_VALUE_OF_AMPERE_90 !< C API A
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_AMPERE_90") :: &
capi_U_058=U_CONVENTIONAL_VALUE_OF_AMPERE_90 !< C API A

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_COULOMB_90=1.00000008887_dp !< C
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_COULOMB_90=0.0_dp !< C

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_COULOMB_90"):: &
capi_059=CONVENTIONAL_VALUE_OF_COULOMB_90 !< C API C
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_COULOMB_90") :: &
capi_U_059=U_CONVENTIONAL_VALUE_OF_COULOMB_90 !< C API C

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_FARAD_90=0.99999998220_dp !< F
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_FARAD_90=0.0_dp !< F

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_FARAD_90"):: &
capi_060=CONVENTIONAL_VALUE_OF_FARAD_90 !< C API F
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_FARAD_90") :: &
capi_U_060=U_CONVENTIONAL_VALUE_OF_FARAD_90 !< C API F

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_HENRY_90=1.00000001779_dp !< H
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_HENRY_90=0.0_dp !< H

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_HENRY_90"):: &
capi_061=CONVENTIONAL_VALUE_OF_HENRY_90 !< C API H
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_HENRY_90") :: &
capi_U_061=U_CONVENTIONAL_VALUE_OF_HENRY_90 !< C API H

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT=483597.9e9_dp !< Hz V^-1
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT=0.0_dp !< Hz V^-1

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT"):: &
capi_062=CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT !< C API Hz V^-1
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT") :: &
capi_U_062=U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT !< C API Hz V^-1

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_OHM_90=1.00000001779_dp !< ohm
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_OHM_90=0.0_dp !< ohm

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_OHM_90"):: &
capi_063=CONVENTIONAL_VALUE_OF_OHM_90 !< C API ohm
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_OHM_90") :: &
capi_U_063=U_CONVENTIONAL_VALUE_OF_OHM_90 !< C API ohm

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_VOLT_90=1.00000010666_dp !< V
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_VOLT_90=0.0_dp !< V

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_VOLT_90"):: &
capi_064=CONVENTIONAL_VALUE_OF_VOLT_90 !< C API V
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_VOLT_90") :: &
capi_U_064=U_CONVENTIONAL_VALUE_OF_VOLT_90 !< C API V

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT=25812.807_dp !< ohm
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT=0.0_dp !< ohm

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT"):: &
capi_065=CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT !< C API ohm
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT") :: &
capi_U_065=U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT !< C API ohm

real(dp), parameter, public :: CONVENTIONAL_VALUE_OF_WATT_90=1.00000019553_dp !< W
real(dp), parameter, public :: U_CONVENTIONAL_VALUE_OF_WATT_90=0.0_dp !< W

real(cdp), protected, public, bind(C,name="CONVENTIONAL_VALUE_OF_WATT_90"):: &
capi_066=CONVENTIONAL_VALUE_OF_WATT_90 !< C API W
real(cdp), protected, public, bind(C,name="U_CONVENTIONAL_VALUE_OF_WATT_90") :: &
capi_U_066=U_CONVENTIONAL_VALUE_OF_WATT_90 !< C API W

real(dp), parameter, public :: COPPER_X_UNIT=1.00207697e-13_dp !< m
real(dp), parameter, public :: U_COPPER_X_UNIT=0.00000028e-13_dp !< m

real(cdp), protected, public, bind(C,name="COPPER_X_UNIT"):: &
capi_067=COPPER_X_UNIT !< C API m
real(cdp), protected, public, bind(C,name="U_COPPER_X_UNIT") :: &
capi_U_067=U_COPPER_X_UNIT !< C API m

real(dp), parameter, public :: DEUTERON_ELECTRON_MAG__MOM__RATIO=-4.664345551e-4_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_ELECTRON_MAG__MOM__RATIO=0.000000012e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_ELECTRON_MAG__MOM__RATIO"):: &
capi_068=DEUTERON_ELECTRON_MAG__MOM__RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_ELECTRON_MAG__MOM__RATIO") :: &
capi_U_068=U_DEUTERON_ELECTRON_MAG__MOM__RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_ELECTRON_MASS_RATIO=3670.48296788_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_ELECTRON_MASS_RATIO=0.00000013_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_ELECTRON_MASS_RATIO"):: &
capi_069=DEUTERON_ELECTRON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_ELECTRON_MASS_RATIO") :: &
capi_U_069=U_DEUTERON_ELECTRON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_G_FACTOR=0.8574382338_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_G_FACTOR=0.0000000022_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_G_FACTOR"):: &
capi_070=DEUTERON_G_FACTOR !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_G_FACTOR") :: &
capi_U_070=U_DEUTERON_G_FACTOR !< C API dimensionless

real(dp), parameter, public :: DEUTERON_MAG__MOM=4.330735094e-27_dp !< J T^-1
real(dp), parameter, public :: U_DEUTERON_MAG__MOM=0.000000011e-27_dp !< J T^-1

real(cdp), protected, public, bind(C,name="DEUTERON_MAG__MOM"):: &
capi_071=DEUTERON_MAG__MOM !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_DEUTERON_MAG__MOM") :: &
capi_U_071=U_DEUTERON_MAG__MOM !< C API J T^-1

real(dp), parameter, public :: DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=4.669754570e-4_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=0.000000012e-4_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO"):: &
capi_072=DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
capi_U_072=U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=0.8574382338_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=0.0000000022_dp !< dimensionless

real(cdp), protected, public, bind(C,name="DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO"):: &
capi_073=DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
capi_U_073=U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: DEUTERON_MASS=3.3435837724e-27_dp !< kg
real(dp), parameter, public :: U_DEUTERON_MASS=0.0000000010e-27_dp !< kg

real(cdp), protected, public, bind(C,name="DEUTERON_MASS"):: &
capi_074=DEUTERON_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_DEUTERON_MASS") :: &
capi_U_074=U_DEUTERON_MASS !< C API kg

real(dp), parameter, public :: DEUTERON_MASS_ENERGY_EQUIVALENT=3.00506323102e-10_dp !< J
real(dp), parameter, public :: U_DEUTERON_MASS_ENERGY_EQUIVALENT=0.00000000091e-10_dp !< J

real(cdp), protected, public, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT"):: &
capi_075=DEUTERON_MASS_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT") :: &
capi_U_075=U_DEUTERON_MASS_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV=1875.61294257_dp !< MeV
real(dp), parameter, public :: U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV=0.00000057_dp !< MeV

real(cdp), protected, public, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV"):: &
capi_076=DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV
real(cdp), protected, public, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
capi_U_076=U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV

real(dp), parameter, public :: DEUTERON_MASS_IN_U=2.013553212745_dp !< u
real(dp), parameter, public :: U_DEUTERON_MASS_IN_U=0.000000000040_dp !< u

real(cdp), protected, public, bind(C,name="DEUTERON_MASS_IN_U"):: &
capi_077=DEUTERON_MASS_IN_U !< C API u
real(cdp), protected, public, bind(C,name="U_DEUTERON_MASS_IN_U") :: &
capi_U_077=U_DEUTERON_MASS_IN_U !< C API u

real(dp), parameter, public :: DEUTERON_MOLAR_MASS=2.01355321205e-3_dp !< kg mol^-1
real(dp), parameter, public :: U_DEUTERON_MOLAR_MASS=0.00000000061e-3_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="DEUTERON_MOLAR_MASS"):: &
capi_078=DEUTERON_MOLAR_MASS !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_DEUTERON_MOLAR_MASS") :: &
capi_U_078=U_DEUTERON_MOLAR_MASS !< C API kg mol^-1

real(dp), parameter, public :: DEUTERON_NEUTRON_MAG__MOM__RATIO=-0.44820653_dp !< dimensionless
real(dp), parameter, public :: U_DEUTERON_NEUTRON_MAG__MOM__RATIO=0.00000011_dp !< dimensionless
